--- a/RapidNRIMs/appsettings.json
+++ b/RapidNRIMs/appsettings.json
@@ -7,14 +7,14 @@
   },
   "AllowedHosts": "*",
   "pro": "Version 2.2",
-  "aurl": "https://192.168.0.111:4019",
-  "nurl": "https://192.168.0.111:4020",
-  "rurl": "https://192.168.0.27:4007",
-  "nurlPhase2": "https://192.168.0.111:4020",
+  "aurl": "",
+  "nurl": "",
+  "rurl": "",
+  "nurlPhase2": "",
   "nurlFileRecordEvent": "/api/UploadFile/RecordEvent/",
   "nurlFileInstrument": "/api/UploadFile/Instrument/",
   "nurlFileInventory": "/api/UploadFile/Inventory/",
   "nurlFileRadiationSource": "/api/UploadFile/RadiationSource/",
   "nurlFileLogo" :  "/api/UploadFile/Logo/",
-  "FileStorage": "E:\\ฝ่าย IT\\Project\\Project\\RapidNRIMS_2567_OAP\\3.Develop\\Client\\FileUpload"
+  "FileStorage": "\Project\\RapidNRIMS_2567_OAP\\3.Develop\\Client\\FileUpload"
 }
